2022-02-07 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Additional improvements to genPointerGet and genPointerSet.

2022-02-06 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Improve genPointerGet.

2022-02-06 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/hc08/gen.c:
	  Removed useless offset increment.
	* sdcc/src/mos6502/gen.c:
	  Track temp reg literal values across store/load.

2022-02-06 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Fixed a few corner cases in genPointerGet/genPointerSet.

2022-02-06 Benedikt Freisen <b.freisen AT gmx.net>

	* support/scripts/sdcc.nsi:
	  Add missing Delete and RMDir entries.

2022-02-05 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Changed regalloc_dry_run_cost_cycles to float.
	* sdcc/src/mos6502/ralloc.c,
	  sdcc/src/mos6502/ralloc.h,
	  sdcc/src/mos6502/ralloc2.cc:
	  Initial merge of stm8 and pdk improvements to the register allocator.

2022-02-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/scripts/sdcc.nsi:
	  (Un)install sdas6500 assembler, fix left-over mcs51 huge lib after uninstall (bug #2972),
	  installation options for r2ka and mos6502 libraries.

2022-02-03 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* doc/README.txt:
	  Update port status in README.

2022-02-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* support/makebin/makebin.c:
	  Fix segmentation fault when using -yp and patching of wrong address.

2022-02-03 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Update documentation.

2022-02-03 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* device/lib/printf_large.c,
	  src/SDCCBBlock.h,
	  src/SDCCast.c,
	  src/SDCCdwarf2.c,
	  src/SDCCicode.c,
	  src/SDCClabel.c,
	  src/SDCCloop.c,
	  src/SDCCmacro.c,
	  src/SDCCset.c,
	  src/SDCCutil.c,
	  src/ds390/ralloc.c,
	  src/z80/ralloc.c,
	  support/regression/generate-cases.py:
	  Fix typos in comments.