@@ -1,6 +1,11 @@
 2022-02-07 Gabriele Gorla <gorlik@yahoo.com>
 
 	* sdcc/src/mos6502/gen.c:
+	  Workaround bug-3129 failures when optimizing for size.
+
+2022-02-07 Gabriele Gorla <gorlik@yahoo.com>
+
+	* sdcc/src/mos6502/gen.c:
 	  Additional improvements to genPointerGet and genPointerSet.
 
 2022-02-06 Gabriele Gorla <gorlik@yahoo.com>
